--- a/310-edav-checklist.qmd
+++ b/310-edav-checklist.qmd
@@ -3,8 +3,8 @@
 ```{r edav-checklist}
 #| results: asis
 #| echo: false
-source("_common.R")
-status("complete")
+#source("_common.R")
+#status("complete")
 ```
 
 ## Videos / Chapters 
