--- a/303-edav-visualisation.qmd
+++ b/303-edav-visualisation.qmd
@@ -3,8 +3,8 @@
 ```{r edav-visualisation-setup}
 #| results: asis
 #| echo: false
-source("_common.R")
-status("complete")
+#source("_common.R")
+#status("complete")
 ```
 
 ## Introduction
