--- a/103-workflows-organising-your-code.qmd
+++ b/103-workflows-organising-your-code.qmd
@@ -3,8 +3,8 @@
 ```{r workflows-code-setup}
 #| results: 'asis'
 #| echo: false
-source("_common.R")
-status("complete")
+#source("_common.R")
+#status("complete")
 ```
 
 ## Introduction 
