--- a/110-workflows-checklist.qmd
+++ b/110-workflows-checklist.qmd
@@ -3,8 +3,8 @@
 ```{r workflows-checklist-setup}
 #| results: 'asis'
 #| echo: false
-source("_common.R")
-status("complete")
+#source("_common.R")
+#status("complete")
 ```
 
 ## Videos / Chapters
